--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
           </p>
           <a href="./bicicletas">Escolha a sua</a>
         </div>
-        <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta" />
+        <div>
+          <img
+            src="./img/fotos/introducao.jpg"
+            alt="Bicicleta elétrica preta"
+          />
+        </div>
       </div>
     </main>
   </body>
