--- a/termos.html
+++ b/termos.html
@@ -15,14 +15,14 @@
     />
   </head>
 
-  <body>
+  <body id="termos">
     <header class="header-bg">
       <div class="container header">
-        <a href=""><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
 
         <nav aria-label="primaria">
           <ul class="header-menu font-1-m cor-0">
-            <li><a href="./biclicletas.html">Bicicletas</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
           </ul>
