--- a/bicicletas.html
+++ b/bicicletas.html
@@ -51,7 +51,7 @@
         <p class="font-2-s cor-8">
           A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
           vem equipada com os melhores acessórios, o que garante maior
-          velocidade.
+          velocidade e desempenho.
         </p>
         <ul class="font-1-m cor-8">
           <li><img src="./img/icones/eletrica.svg" alt="" />Motor Elétrico</li>
@@ -72,9 +72,7 @@
         <div class="bicicletas-conteudo">
           <h2 class="font-1-xl cor-0">Magic Might</h2>
           <p class="font-2-s cor-5">
-            A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
-            vem equipada com os melhores acessórios, o que garante maior
-            velocidade.
+            Com extremo conforto, a Magic Might é a melhor opção para aqueles que desejam levesa durante suas pedaladas. O modelo de quadro Magic Slim é o mais leve do acervo Bikcraft, a tornando facilmente transportável.
           </p>
           <ul class="font-1-m cor-5">
             <li>
@@ -99,9 +97,7 @@
       <div class="bicicletas-conteudo">
         <h2 class="font-1-xl">Nebula Cosmic</h2>
         <p class="font-2-s cor-8">
-          A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
-          vem equipada com os melhores acessórios, o que garante maior
-          velocidade.
+          A Nebula Cosmic é perfeita para ciclistas de primeira viagem. Extremamente confortável e econômica por conta dos amortecedores e do novo motor Cosmic-GO.
         </p>
         <ul class="font-1-m cor-8">
           <li><img src="./img/icones/eletrica.svg" alt="" />Motor Elétrico</li>
