--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml" />
     <title>Magic Might | Bikcraft</title>
     <meta name="description" content="Nimbus Stark." />
     <link rel="stylesheet" href="../css/style.css" />
@@ -11,8 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="bicicleta">
@@ -49,10 +53,17 @@
 
         <div class="bicicleta-conteudo">
           <p class="font-2-l cor-5">
-            Com extremo conforto, a Magic Might é a melhor opção para aqueles que desejam levesa durante suas pedaladas. O modelo de quadro Magic Slim é o mais leve do acervo Bikcraft, a tornando facilmente transportável.
+            Com extremo conforto, a Magic Might é a melhor opção para aqueles
+            que desejam levesa durante suas pedaladas. O modelo de quadro Magic
+            Slim é o mais leve do acervo Bikcraft, a tornando facilmente
+            transportável.
           </p>
           <div class="bicicleta-comprar">
-            <a class="botao" href="../orcamento.html">Comprar Agora</a>
+            <a
+              class="botao"
+              href="../orcamento.html?tipo=bikcraft&produto=magic"
+              >Comprar Agora</a
+            >
             <span class="font-1-xs cor-6"
               ><img src="../img/icones/entrega.svg" alt="" />Entrega em 5
               dias</span
@@ -139,15 +150,17 @@
         <div class="bicicleta-seguro-imagem">
           <img
             src="../img/fotos/seguros.jpg"
-            alt="Pessoa parada em cima de uma bicicleta."
-          />
+            alt="Pessoa parada em cima de uma bicicleta." />
         </div>
         <div class="bicicleta-seguro-conteudo">
           <h2 class="font-1-xxl cor-0">
             Pedale mais tranquilo com o nosso
             <span class="cor-p1">seguro.</span>
           </h2>
-          <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+          <p class="font-2-l cor-5">
+            Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite
+            diversos benefícios.
+          </p>
           <a class="botao" href="../seguros.html">Conheça Mais</a>
         </div>
       </div>
@@ -197,5 +210,6 @@
         </p>
       </div>
     </footer>
+    <script src="../js/script.js"></script>
   </body>
 </html>
