--- a/index.html
+++ b/index.html
@@ -4,24 +4,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+
     <title>Bikcraft - Bicicletas Elétricas</title>
     <meta
       name="description"
-      content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+      content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="index">
     <header class="header-bg">
       <div class="container header">
-        <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="./"
+          ><img src="./img/bikcraft.svg" alt="Bikcraft" width="136" height="32"
+        /></a>
 
         <nav aria-label="primaria">
           <ul class="header-menu font-1-m cor-0">
@@ -36,21 +44,27 @@
     <main class="introducao-bg">
       <div class="introducao container">
         <div class="introducao-conteudo">
-          <h1 class="font-1-xxl cor-0">
+          <h1 class="font-1-xxl cor-0 fadeInDown" data-anime="200">
             Bicicletas feitas sob medida<span class="cor-p1">.</span>
           </h1>
-          <p class="font-2-l cor-5">
+          <p class="font-2-l cor-5 fadeInDown" data-anime="400">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para você. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a class="botao" href="./bicicletas">Ver Mais</a>
+          <a class="botao fadeInDown" href="./bicicletas.html" data-anime="600"
+            >Ver Mais</a
+          >
         </div>
-        <div>
+        <picture class="fadeInDown" data-anime="800">
+          <source
+            media="(max-width: 800px)"
+            srcset="./img/bicicletas/nimbus.jpg" />
           <img
             src="./img/fotos/introducao.jpg"
             alt="Bicicleta elétrica preta"
-          />
-        </div>
+            width="1280"
+            height="1600" />
+        </picture>
       </div>
     </main>
 
@@ -151,8 +165,7 @@
       <div>
         <img
           src="./img/fotos/depoimento.jpg"
-          alt="Pessoa pedalando uma bicicleta Bikcraft"
-        />
+          alt="Pessoa pedalando uma bicicleta Bikcraft" />
       </div>
       <div class="depoimento-conteudo">
         <blockquote class="font-1-xl cor-p5">
@@ -246,5 +259,8 @@
         </p>
       </div>
     </footer>
+
+    <script src="./js/plugins/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
