--- a/termos.html
+++ b/termos.html
@@ -4,15 +4,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
     <title>Termos e Condições | Bikcraft</title>
     <meta name="description" content="Termos e Condições." />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="termos">
@@ -43,13 +48,33 @@
 
     <div class="termos font-2-s cor-10 container">
       <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-      <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+      <p>
+        1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+        e American Express. Para pagamentos à vista também aceitarmos PIX e
+        Boleto através do PagSeguro.
+      </p>
+      <p>
+        1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+        e American Express. Para pagamentos à vista também aceitarmos PIX e
+        Boleto através do PagSeguro.
+      </p>
+      <p>
+        1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+        e American Express. Para pagamentos à vista também aceitarmos PIX e
+        Boleto através do PagSeguro.
+      </p>
       <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
-      <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+      <p>
+        1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+        e American Express. Para pagamentos à vista também aceitarmos PIX e
+        Boleto através do PagSeguro.
+      </p>
       <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
-      <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+      <p>
+        1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+        e American Express. Para pagamentos à vista também aceitarmos PIX e
+        Boleto através do PagSeguro.
+      </p>
     </div>
 
     <footer class="footer-bg">
@@ -96,5 +121,6 @@
         </p>
       </div>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
